--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "private": true,
   "dependencies": {
     "webpack": "^5.72.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.10.0"
   }
 }
