--- a/package.json
+++ b/package.json
@@ -4,22 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack"
   },
   "author": "",
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "image-webpack-loader": "^8.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "^5.72.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "pug-html-loader": "^1.1.5",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "webpack-cli": "^4.10.0"
+    "vue": "^3.2.39",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.7.10",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
