--- a/package.json
+++ b/package.json
@@ -32,11 +32,9 @@
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
-    "vue": "^3.2.39",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.7.10",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   }
